--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   auto_route: ^3.2.3
   flutter_screenutil: ^5.3.1
   flutter_svg: ^1.0.3
-
+  riverpod: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +70,7 @@ flutter:
    - assets/icons/
    - assets/images/
    - assets/images/weather/
+   - assets/images/devices/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
