--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   flutter_svg: ^1.0.3
   get: ^4.6.1
   unicons: ^2.1.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.1.10
+  json_serializable: ^6.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +70,7 @@ flutter:
     - assets/images/
     - assets/images/weather/
     - assets/images/devices/
+    - assets/images/decoration/
     - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
