--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get: ^4.6.1
   unicons: ^2.1.0
   equatable: ^2.0.3
+  flutter_dotenv: ^5.0.2
+  http: ^0.13.4
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +75,7 @@ flutter:
     - assets/images/devices/
     - assets/images/decoration/
     - assets/fonts/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
