--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,21 +33,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_screenutil: ^5.3.1
+  flutter_screenutil: ^5.5.3+2
   flutter_svg: ^1.0.3
-  get: ^4.6.1
+  get: ^4.6.5
   unicons: ^2.1.0
   equatable: ^2.0.3
   flutter_dotenv: ^5.0.2
   http: ^0.13.4
   get_it: ^7.2.0
+  hive: ^2.2.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  build_runner: ^2.1.10
-  json_serializable: ^6.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
