--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   get_it: ^7.2.0
   hive: ^2.2.1
   hive_flutter: ^1.1.0
+  record: ^4.1.1
+  permission_handler: ^9.2.0
+  path_provider: ^2.0.11
+  path: ^1.8.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
